# python-fullstack-web-

./: .gitignore  ARCHITECTURE.md  IMPROVED_PATTERNS.md  IMPROVEMENTS_QUICK_REF.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PUBLICATION_CHECKLIST.md  README.md  READY_FOR_PUBLICATION.md  SCALABILITY_GUIDE.md  app.py  pyproject.toml  xania.py
documentation/: HTML_ELEMENTS.md  README.md  index.html  tutorial.py
documentation/static/: app.js  spa_runtime.js
engine/: runtime.py  serializer.py
example/: counter.py
examples/: spa_server.py
renderer/: component.py  elements.py  registry.py  render.py  state.py
static/: runtime.js
web/: routes.py
xania/: __init__.py  __main__.py  cli.py
xania/engine/: runtime.py  serializer.py
xania/example/: counter.py
xania/renderer/: __init__.py  component.py  component_decorator.py  index.html  registry.py  render.py  test.html
xania/runtime/: __init__.py  compiler.py  spa.py
xania/static/: app.js  runtime.js
xania/web/: app.py  auth.py  config.py  ratelimit.py  routes.py  schemas.py  serve.py
