[project]
name = "supreme-ui"
version = "0.1.0"
description = "A minimal React-like Python UI framework on FastAPI (CSR runtime + component model)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["ui", "spa", "fastapi", "vdom", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
