[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xania"
version = "0.1.4"
description = "A minimal React-like Python UI framework on FastAPI (CSR runtime + component model)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["xania", "ui", "spa", "fastapi", "vdom", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.3.3",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]

[project.scripts]
xania = "xania.cli:cli"

[tool.setuptools.packages.find]
include = ["xania*"]

[tool.setuptools.package-data]
xania = ["static/*.js", "renderer/*.html"]
